--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "jest": "^30.0.5"
+    }
 }
