feat: package.json updated
project type updated to commonjs and scripts configured to jest.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
-    "type": "module",
+    "type": "commonjs",
+    "scripts": {
+        "test": "jest"
+    },
     "devDependencies": {
         "jest": "^30.0.5"
     }
