fix(package): dotenv package.
Fix dotenv package from envDependicies to dependencies.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "test": "jest"
     },
     "devDependencies": {
-        "dotenv": "^17.2.1",
         "jest": "^30.0.5"
+    },
+    "dependencies": {
+        "dotenv": "^17.2.1"
     }
 }
